# bowecho

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rptw.csv  titan1993.txt  torn.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/app_ui/: Cargo.toml  build.rs
crates/app_ui/assets/: OFL-LICENSE.txt
crates/app_ui/examples/: dock_spike.rs  poll_probe.rs
crates/app_ui/src/: annotate.rs  basemap_towns.rs  dock.rs  event_explorer.rs  farm_live.rs  fonts.rs  glm_layer.rs  guide.rs  ingest_worker.rs  layers_rail.rs  lib.rs  main.rs  media.rs  mesoanalysis.rs  model_data.rs  model_layer.rs  oa_derived.rs  obs.rs  obs_soundings.rs  placefiles.rs  rhi.rs  sat_worker.rs  skewt_native.rs  sounding_panels.rs  spc_layers.rs  table_editor.rs  tiles.rs  tor_tracks.rs  ui_theme.rs  units.rs  upper_air.rs  vol3d.rs  wofs.rs  wofs_georef.rs
crates/app_ui/src/annotate/: draw.rs  geometry.rs  persist.rs
crates/bowecho_ffi/: Cargo.toml
crates/bowecho_ffi/src/: lib.rs
crates/color_tables/src/: lib.rs
crates/data_source/: Cargo.toml
crates/data_source/examples/: intl_probe.rs  kmkx_fetch.rs  probe_sources.rs  site_list_probe.rs  tile_fetch_probe.rs
crates/data_source/src/: community_feeds.rs  embedded_sites.rs  international.rs  lib.rs
crates/data_source/src/international/: chmi.rs  dmi.rs  dwd.rs  fmi.rs  geosphere.rs  listing.rs  ord.rs  shmu.rs  smhi.rs
crates/data_source/src/international/fixtures/: dmi_items_sorted.json  fmi_fianj_listing.xml  fmi_site_prefixes.xml  geosphere_listing_recent.xml  geosphere_listing_truncated.xml  ord_bejab_hour.xml  ord_fr_site_prefixes.xml  ord_frtou_hour.xml  ord_iedub_hour.xml  ord_mtgud_hour.xml  ord_nlhrw_hour.xml  ord_nohur_hour.xml  smhi_areas.json  smhi_qcvol_angelholm.json
crates/data_source/tests/fixtures/: chmi_brd_products.html  chmi_brd_vol_v_files.html  chmi_brd_vol_z_files.html  chmi_sites_root.html  dwd_asb_v_filter_polarimetric_files.html  dwd_asb_v_hdf5_dir.html  dwd_asb_v_station_dir.html  dwd_asb_z_hdf5_dir.html  dwd_asb_z_station_dir.html  dwd_asb_z_unfiltered_files.html  dwd_sites_root.html  dwd_sweep_vol_z_stations.html  shmu_skjav_dbz_dates.html  shmu_skjav_dbz_files.html  shmu_skjav_products.html  shmu_skjav_v_files.html  shmu_volume_root.html
crates/dealias/: AGENTS.md  Cargo.toml  README.md
crates/dealias/examples/: unfold_wind.rs
crates/dealias/src/: cascade.rs  despeckle.rs  lib.rs  reference.rs  region.rs
crates/nexrad_io/: Cargo.toml
crates/nexrad_io/examples/: bench_decode.rs  dorade_probe.rs  dorade_xval.rs  dump_radar.rs  intl_assembly_probe.rs  jma_inspect.rs  mobile_archive_probe.rs  verify_pipeline.rs
crates/nexrad_io/src/: cfradial.rs  dorade.rs  hdf5lite.rs  jma.rs  lib.rs  mobile_archive.rs  netcdf3.rs  odim.rs
crates/nexrad_io/tests/: cfradial_real.rs  cfradial_real_files.rs  dorade_real.rs  odim_real.rs  odim_real_files.rs  router_real_files.rs
crates/nexrad_io/tests/data/: cfrad.20211011_223602_DOW8_RHI.trim3.nc  cfrad.xsapr_sgp_ppi_20110520.classic.nc  cfrad_synth.nc  convert_cfradial.py  gen_cfradial_fixture.py  gen_odim_fixture.py  odim_pvol_synth.h5  ref_cfradial.py  ref_odim.py  swp.1260521225514.COW2.229.1.0_SUR_v215.head24
crates/radar_core/src/: lib.rs
crates/render2d/: Cargo.toml
crates/render2d/examples/: bench_render.rs  cell_probe.rs  cross_section_probe.rs  cut_probe.rs  dealias_blob_probe.rs  dealias_temporal_probe.rs  hail_wind_probe.rs  multisite_profile.rs  perf_probe.rs  product_gallery.rs  rot_debug.rs  rotation_probe.rs  shear_probe.rs  smooth_probe.rs  tor_tracks_probe.rs  track_quality_probe.rs  velocity_bench.rs  velocity_diag.rs  velocity_point_probe.rs  velocity_repro.rs  visual_probe.rs  volumetric_probe.rs
crates/render2d/src/: cascade.rs  cells.rs  detect.rs  gate_filter.rs  interpolate.rs  lib.rs  rhi.rs  shear.rs  smooth.rs  tracking.rs  tracks.rs  volumetric.rs  wind.rs
crates/render2d/tests/: rhi_real.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/styles/: Cargo.toml
crates/styles/src/: lib.rs
docs/: SIGNING.md  codex-robustness-audit.md  customization-spec.md  dealias-fold-branch-analysis.md  docking-spike.md  format-validation.md  hail-wind-algo-spec.md  ios-port-notes.md  mesoanalysis-spec.md  products-guide.md  sidebar-redesign-spec.md  spc-catalog.md  storm-track-rebuild-spec.md  ui-overhaul-spec.md  ui-refresh-proposal.md  xsection-3d-spec.md
docs/superpowers/specs/: 2026-06-09-fastest-radar-ui-parity-design.md
ios/: .gitignore  README.md  project.yml
ios/BowEcho/: BowEcho-Bridging-Header.h
ios/BowEcho/Sources/: BowEchoApp.swift  ContentView.swift  RadarEngine.swift  RadarMapView.swift  RadarModels.swift
ios/include/: bowecho.h
scit_paper/: page_01.txt  page_02.txt  page_03.txt  page_04.txt  page_05.txt  page_06.txt  page_07.txt  page_08.txt  page_09.txt  page_10.txt  page_11.txt  page_12.txt  page_13.txt  page_14.txt
tools/: generate_town_labels.py
