[package]
name = "app_ui"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
chrono.workspace = true
rayon.workspace = true
color_tables = { path = "../color_tables" }
data_source = { path = "../data_source" }
flate2.workspace = true
eframe.workspace = true
image.workspace = true
nexrad_io = { path = "../nexrad_io" }
radar_core = { path = "../radar_core" }
render2d = { path = "../render2d" }
settings = { path = "../settings" }
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "bowecho"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1"

[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
rfd.workspace = true

# Model-data dock (rusty-weather rw-ui). Branch-only path dep.
[dependencies.rw-ui]
git = "https://github.com/FahrenheitResearch/rusty-weather"
rev = "666a1e0"

[dependencies.rustwx-render]
git = "https://github.com/FahrenheitResearch/rusty-weather"
rev = "666a1e0"

[dependencies.rustwx-sounding]
git = "https://github.com/FahrenheitResearch/rusty-weather"
rev = "666a1e0"

[dependencies.sharprs]
git = "https://github.com/FahrenheitResearch/rusty-weather"
rev = "666a1e0"

[dependencies.rw-ingest]
git = "https://github.com/FahrenheitResearch/rusty-weather"
rev = "666a1e0"

[dependencies.rustwx-core]
git = "https://github.com/FahrenheitResearch/rusty-weather"
rev = "666a1e0"

[dependencies.rustwx-io]
git = "https://github.com/FahrenheitResearch/rusty-weather"
rev = "666a1e0"

[dependencies.rustwx-models]
git = "https://github.com/FahrenheitResearch/rusty-weather"
rev = "666a1e0"

[dependencies.rw-sat]
git = "https://github.com/FahrenheitResearch/rusty-weather"
rev = "666a1e0"

[dependencies.rw-store]
git = "https://github.com/FahrenheitResearch/rusty-weather"
rev = "666a1e0"
